# solution

./: CMakeLists.txt  README.md
serialization/: CMakeLists.txt  common.h  imp.h  serialization.h  test.cpp
